plang/testing/logs/false-incorrect/19/program19.p.p
def :- cB.
xDPdr (O2) ODt.

ebL (r) :- (aevrc (jw0a (J7J) (u2f (S)) (YeJR) o15s) tUlK (P)); u, (uKDP XQC2 (eB AaXkb)); hcv, (sK7fn (oAol (wIZvp i zUM (j8oh (mP7 QqH)) J)) l8ue (hV) (szWz (J))).
y (mmcW) :- (tXnxC (B) (g) (f (e Xu shSym (oGQqe)) (FX8Gx) Tut) (m9wf g5PJ (jBE (sKiW (o BU (exu f92J7)) (BGVyq)) Iv582 (xnQ (WH) (R))) (v3J pBy1 VefuQ (dol L5XDm) sX528))).
c.


x (HrUc) :- (d (eeUKu (m2XDp piwi Z (Jhj5) (qp tT (zDzv) (wPmiS OFHGv sG) XAT)) (hA8 vh) ZcpN (qJq aFVDG (cYp yRvg6) (a8I))) BKHU).
v9xte E (xu9Ik (T)).


a (fZlIk (AlI) (KN)) T Y2I :- (fhN); p rK8v ND JlDf; ((ca HT erdY; kIS (K) (B324n))); ((a q (rG) OwP t5m)).


f (qP UNbct) (CIvKJ) (wzYN (qtF) (HCom)).

efT e.
eJ8 Y5Xb (vS UeJ) (WmP7x).


? (s (mjVMp (KiFW1) hSQ mH PygGS)).



